syntax="proto3";

option go_package="github.com/moooll/microservices-redis-grpc/price-service/protocol";

package price;

service PriceService {
    rpc StreamPrice (PriceRequest) returns (stream PriceResponse) {}
}

message PriceRequest {
    reserved 1;
}

message PriceResponse {
    string id = 2;
    string companyName = 3;
    float buyPrice = 4;
    float sellPrice = 5;
}
